--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,31 @@
-version: "3"
+version: "3.8"
 services:
   backend:
     build: ./backend
-    ports:
-      - "5001:5000"
+    restart: always
+    expose:
+      - "5000"
     environment:
       - NODE_ENV=production
+    volumes:
+      - ./backend/data:/app/data
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      args:
+        VITE_API_BASE: "/api"
+    restart: always
+    expose:
+      - "3000"
+
+  nginx:
+    image: nginx:1.25
+    restart: always
     ports:
-      - "3000:3000"
+      - "80:80"
     volumes:
-      - ./frontend:/app
-    environment:
-      - NODE_ENV=production
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
+      - frontend
       - backend
