--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,12 @@
-# Build stage
 FROM node:18-alpine AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+ARG VITE_API_BASE
+ENV VITE_API_BASE $VITE_API_BASE
 RUN npm run build
 
-# Production stage
 FROM node:18-alpine AS runner
 WORKDIR /app
 RUN npm install -g serve
