feat: Complete prompt library with 388 prompts and production deployment - Add 388 comprehensive prompts across all tags (minimum 10 per tag) - Implement complete Kubernetes deployment with manifests and scripts - Add comprehensive backup and restore system for database - Update README with Kubernetes deployment instructions - Clean up temporary script files and improve .gitignore - Add persistent volume support for SQLite database - Include monitoring, scaling, and health check configurations - Document both Docker Compose and Kubernetes deployment paths

--- a/.gitignore
+++ b/.gitignore
@@ -284,4 +284,25 @@ tramp
 
 # Local development overrides
 .local/
-local/ 
+local/
+
+# Temporary script files
+add_*.js
+temp_*.js
+quick_*.js
+test_*.js
+restore_*.js
+final_*.js
+
+# Kubernetes build artifacts
+k8s/generated/
+k8s/secrets/
+k8s/*.secret.yaml
+k8s/*.secret.yml
+
+# Helm charts generated files
+*.tgz
+charts/
+
+# Container registry credentials
+.docker/config.json 
